# cpp_tut_ubonn

./: README.md
compilation/: a.out  main.cpp  main.i  main.s
cpp_functions/: 3  a.out  auto_tuple_return.cpp
first_lib/: CMakeLists.txt  main.cpp  tools.cpp
hello_world/: a.out  hello_world  std_ip.cpp  stdout.txt
hw1/task_1/: commands.sh
hw1/task_2/: build.sh  install.sh
lecture_codes/lec_0/hello_world/: hello_world.cpp
lecture_codes/lec_1/: ref_demo.cpp  strings_demo.cpp  vector_demo.cpp
lecture_codes/lec_2/: function_demo.cpp
lecture_codes/lec_3/cmake_proj/: CMakeLists.txt
lecture_codes/lec_3/cmake_proj/src/: CMakeLists.txt  hello.cpp  main.cpp  world.cpp
lecture_codes/lec_3/cmake_proj/tests/: CMakeLists.txt  test_blah.cpp
lecture_codes/lec_4/: LRValues.cpp  classes.cpp
lecture_codes/lec_5/: InheritPolym.cpp  SstreamManip.cpp
lecture_codes/lec_6/: PointerDeref.cpp  StaticFunc.cpp  StaticVar.cpp
lecture_codes/lec_7/: PtrPoly.cpp
lecture_codes/smart_pointer/: SharedPtr.cpp  UniquePtr.cpp
lecture_codes/templates/: Templates.cpp
sstream/: a.out  sstream_demo.cpp
strings_slicing/: a.out  strings_cpp_demo.cpp  strings_demo.cpp
